Fixed white space on bottom of page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -101,16 +101,15 @@ section {
   height: 0;
   margin-left: auto;
   margin-right: auto;
-  visibility: hidden;
-  font-family: $contentFont;
   font-weight: normal;
+  display: none;
 }
 
 /* Content Styles
 ================= */
 
 .show {
-  visibility: visible;
+  display: block;
   transition: 1s all ease;
   width: 80%;
   height: 100%;
@@ -177,7 +176,6 @@ footer {
   background-color: $baby;
   clear: both;
   height: 190px;
-  border: 1px solid black;
   margin-top:25%;
 
     div {
